# resume-to-latex

./: .gitignore  README.md
backend/: ai_converter.py  config.py  file_processor.py  main.py  prompt.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: convert.js
frontend/src/components/: FileUpload.jsx  LatexDisplay.jsx  UploadProgress.jsx
